test_programs/compile_failure/implicit_numeric_generics/src/main.nr
fn main() {
    foo([])
}

fn foo<N>(bytes: [u8; N]) { }
